--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-scroll-to-top": "^3.0.0",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.65.1",
