--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "framer-motion": "^10.15.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
